# todo_app

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
auth/: authentication.py
database/: connection.py
models/: todo.py  user.py
routes/: todo.py  user.py
